y.output
Grammar

    0 $accept: session $end

    1 session: /* empty */
    2        | session toplevel '\n'
    3        | session error

    4 toplevel: expr
    5         | '?'
    6         | '.'

    7 expr: NUMBER
    8     | NAME
    9     | NAME '=' expr
   10     | expr '+' expr
   11     | expr '-' expr
   12     | expr '*' expr
   13     | expr '/' expr
   14     | '-' expr
   15     | '(' expr ')'
   16     | expr AND expr
   17     | expr OR expr
   18     | expr EQ expr
   19     | expr GT expr
   20     | expr LT expr


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 2
'(' (40) 15
')' (41) 15
'*' (42) 12
'+' (43) 10
'-' (45) 11 14
'.' (46) 6
'/' (47) 13
'=' (61) 9
'?' (63) 5
error (256) 3
NAME (258) 8 9
NUMBER (259) 7
OR (260) 17
AND (261) 16
EQ (262) 18
LT (263) 20
GT (264) 19
UMINUS (265)


Nonterminals, with rules where they appear

$accept (21)
    on left: 0
session (22)
    on left: 1 2 3, on right: 0 2 3
toplevel (23)
    on left: 4 5 6, on right: 2
expr (24)
    on left: 7 8 9 10 11 12 13 14 15 16 17 18 19 20,
    on right: 4 9 10 11 12 13 14 15 16 17 18 19 20


state 0

    0 $accept: . session $end

    $default  reduce using rule 1 (session)

    session  go to state 1


state 1

    0 $accept: session . $end
    2 session: session . toplevel '\n'
    3        | session . error

    $end    shift, and go to state 2
    error   shift, and go to state 3
    NAME    shift, and go to state 4
    NUMBER  shift, and go to state 5
    '-'     shift, and go to state 6
    '?'     shift, and go to state 7
    '.'     shift, and go to state 8
    '('     shift, and go to state 9

    toplevel  go to state 10
    expr      go to state 11


state 2

    0 $accept: session $end .

    $default  accept


state 3

    3 session: session error .

    $default  reduce using rule 3 (session)


state 4

    8 expr: NAME .
    9     | NAME . '=' expr

    '='  shift, and go to state 12

    $default  reduce using rule 8 (expr)


state 5

    7 expr: NUMBER .

    $default  reduce using rule 7 (expr)


state 6

   14 expr: '-' . expr

    NAME    shift, and go to state 4
    NUMBER  shift, and go to state 5
    '-'     shift, and go to state 6
    '('     shift, and go to state 9

    expr  go to state 13


state 7

    5 toplevel: '?' .

    $default  reduce using rule 5 (toplevel)


state 8

    6 toplevel: '.' .

    $default  reduce using rule 6 (toplevel)


state 9

   15 expr: '(' . expr ')'

    NAME    shift, and go to state 4
    NUMBER  shift, and go to state 5
    '-'     shift, and go to state 6
    '('     shift, and go to state 9

    expr  go to state 14


state 10

    2 session: session toplevel . '\n'

    '\n'  shift, and go to state 15


state 11

    4 toplevel: expr .
   10 expr: expr . '+' expr
   11     | expr . '-' expr
   12     | expr . '*' expr
   13     | expr . '/' expr
   16     | expr . AND expr
   17     | expr . OR expr
   18     | expr . EQ expr
   19     | expr . GT expr
   20     | expr . LT expr

    OR   shift, and go to state 16
    AND  shift, and go to state 17
    EQ   shift, and go to state 18
    LT   shift, and go to state 19
    GT   shift, and go to state 20
    '+'  shift, and go to state 21
    '-'  shift, and go to state 22
    '*'  shift, and go to state 23
    '/'  shift, and go to state 24

    $default  reduce using rule 4 (toplevel)


state 12

    9 expr: NAME '=' . expr

    NAME    shift, and go to state 4
    NUMBER  shift, and go to state 5
    '-'     shift, and go to state 6
    '('     shift, and go to state 9

    expr  go to state 25


state 13

   10 expr: expr . '+' expr
   11     | expr . '-' expr
   12     | expr . '*' expr
   13     | expr . '/' expr
   14     | '-' expr .
   16     | expr . AND expr
   17     | expr . OR expr
   18     | expr . EQ expr
   19     | expr . GT expr
   20     | expr . LT expr

    $default  reduce using rule 14 (expr)


state 14

   10 expr: expr . '+' expr
   11     | expr . '-' expr
   12     | expr . '*' expr
   13     | expr . '/' expr
   15     | '(' expr . ')'
   16     | expr . AND expr
   17     | expr . OR expr
   18     | expr . EQ expr
   19     | expr . GT expr
   20     | expr . LT expr

    OR   shift, and go to state 16
    AND  shift, and go to state 17
    EQ   shift, and go to state 18
    LT   shift, and go to state 19
    GT   shift, and go to state 20
    '+'  shift, and go to state 21
    '-'  shift, and go to state 22
    '*'  shift, and go to state 23
    '/'  shift, and go to state 24
    ')'  shift, and go to state 26


state 15

    2 session: session toplevel '\n' .

    $default  reduce using rule 2 (session)


state 16

   17 expr: expr OR . expr

    NAME    shift, and go to state 4
    NUMBER  shift, and go to state 5
    '-'     shift, and go to state 6
    '('     shift, and go to state 9

    expr  go to state 27


state 17

   16 expr: expr AND . expr

    NAME    shift, and go to state 4
    NUMBER  shift, and go to state 5
    '-'     shift, and go to state 6
    '('     shift, and go to state 9

    expr  go to state 28


state 18

   18 expr: expr EQ . expr

    NAME    shift, and go to state 4
    NUMBER  shift, and go to state 5
    '-'     shift, and go to state 6
    '('     shift, and go to state 9

    expr  go to state 29


state 19

   20 expr: expr LT . expr

    NAME    shift, and go to state 4
    NUMBER  shift, and go to state 5
    '-'     shift, and go to state 6
    '('     shift, and go to state 9

    expr  go to state 30


state 20

   19 expr: expr GT . expr

    NAME    shift, and go to state 4
    NUMBER  shift, and go to state 5
    '-'     shift, and go to state 6
    '('     shift, and go to state 9

    expr  go to state 31


state 21

   10 expr: expr '+' . expr

    NAME    shift, and go to state 4
    NUMBER  shift, and go to state 5
    '-'     shift, and go to state 6
    '('     shift, and go to state 9

    expr  go to state 32


state 22

   11 expr: expr '-' . expr

    NAME    shift, and go to state 4
    NUMBER  shift, and go to state 5
    '-'     shift, and go to state 6
    '('     shift, and go to state 9

    expr  go to state 33


state 23

   12 expr: expr '*' . expr

    NAME    shift, and go to state 4
    NUMBER  shift, and go to state 5
    '-'     shift, and go to state 6
    '('     shift, and go to state 9

    expr  go to state 34


state 24

   13 expr: expr '/' . expr

    NAME    shift, and go to state 4
    NUMBER  shift, and go to state 5
    '-'     shift, and go to state 6
    '('     shift, and go to state 9

    expr  go to state 35


state 25

    9 expr: NAME '=' expr .
   10     | expr . '+' expr
   11     | expr . '-' expr
   12     | expr . '*' expr
   13     | expr . '/' expr
   16     | expr . AND expr
   17     | expr . OR expr
   18     | expr . EQ expr
   19     | expr . GT expr
   20     | expr . LT expr

    OR   shift, and go to state 16
    AND  shift, and go to state 17
    EQ   shift, and go to state 18
    LT   shift, and go to state 19
    GT   shift, and go to state 20
    '+'  shift, and go to state 21
    '-'  shift, and go to state 22
    '*'  shift, and go to state 23
    '/'  shift, and go to state 24

    $default  reduce using rule 9 (expr)


state 26

   15 expr: '(' expr ')' .

    $default  reduce using rule 15 (expr)


state 27

   10 expr: expr . '+' expr
   11     | expr . '-' expr
   12     | expr . '*' expr
   13     | expr . '/' expr
   16     | expr . AND expr
   17     | expr . OR expr
   17     | expr OR expr .
   18     | expr . EQ expr
   19     | expr . GT expr
   20     | expr . LT expr

    AND  shift, and go to state 17
    EQ   shift, and go to state 18
    LT   shift, and go to state 19
    GT   shift, and go to state 20
    '+'  shift, and go to state 21
    '-'  shift, and go to state 22
    '*'  shift, and go to state 23
    '/'  shift, and go to state 24

    $default  reduce using rule 17 (expr)


state 28

   10 expr: expr . '+' expr
   11     | expr . '-' expr
   12     | expr . '*' expr
   13     | expr . '/' expr
   16     | expr . AND expr
   16     | expr AND expr .
   17     | expr . OR expr
   18     | expr . EQ expr
   19     | expr . GT expr
   20     | expr . LT expr

    EQ   shift, and go to state 18
    LT   shift, and go to state 19
    GT   shift, and go to state 20
    '+'  shift, and go to state 21
    '-'  shift, and go to state 22
    '*'  shift, and go to state 23
    '/'  shift, and go to state 24

    $default  reduce using rule 16 (expr)


state 29

   10 expr: expr . '+' expr
   11     | expr . '-' expr
   12     | expr . '*' expr
   13     | expr . '/' expr
   16     | expr . AND expr
   17     | expr . OR expr
   18     | expr . EQ expr
   18     | expr EQ expr .
   19     | expr . GT expr
   20     | expr . LT expr

    LT   shift, and go to state 19
    GT   shift, and go to state 20
    '+'  shift, and go to state 21
    '-'  shift, and go to state 22
    '*'  shift, and go to state 23
    '/'  shift, and go to state 24

    $default  reduce using rule 18 (expr)


state 30

   10 expr: expr . '+' expr
   11     | expr . '-' expr
   12     | expr . '*' expr
   13     | expr . '/' expr
   16     | expr . AND expr
   17     | expr . OR expr
   18     | expr . EQ expr
   19     | expr . GT expr
   20     | expr . LT expr
   20     | expr LT expr .

    '+'  shift, and go to state 21
    '-'  shift, and go to state 22
    '*'  shift, and go to state 23
    '/'  shift, and go to state 24

    $default  reduce using rule 20 (expr)


state 31

   10 expr: expr . '+' expr
   11     | expr . '-' expr
   12     | expr . '*' expr
   13     | expr . '/' expr
   16     | expr . AND expr
   17     | expr . OR expr
   18     | expr . EQ expr
   19     | expr . GT expr
   19     | expr GT expr .
   20     | expr . LT expr

    '+'  shift, and go to state 21
    '-'  shift, and go to state 22
    '*'  shift, and go to state 23
    '/'  shift, and go to state 24

    $default  reduce using rule 19 (expr)


state 32

   10 expr: expr . '+' expr
   10     | expr '+' expr .
   11     | expr . '-' expr
   12     | expr . '*' expr
   13     | expr . '/' expr
   16     | expr . AND expr
   17     | expr . OR expr
   18     | expr . EQ expr
   19     | expr . GT expr
   20     | expr . LT expr

    '*'  shift, and go to state 23
    '/'  shift, and go to state 24

    $default  reduce using rule 10 (expr)


state 33

   10 expr: expr . '+' expr
   11     | expr . '-' expr
   11     | expr '-' expr .
   12     | expr . '*' expr
   13     | expr . '/' expr
   16     | expr . AND expr
   17     | expr . OR expr
   18     | expr . EQ expr
   19     | expr . GT expr
   20     | expr . LT expr

    '*'  shift, and go to state 23
    '/'  shift, and go to state 24

    $default  reduce using rule 11 (expr)


state 34

   10 expr: expr . '+' expr
   11     | expr . '-' expr
   12     | expr . '*' expr
   12     | expr '*' expr .
   13     | expr . '/' expr
   16     | expr . AND expr
   17     | expr . OR expr
   18     | expr . EQ expr
   19     | expr . GT expr
   20     | expr . LT expr

    $default  reduce using rule 12 (expr)


state 35

   10 expr: expr . '+' expr
   11     | expr . '-' expr
   12     | expr . '*' expr
   13     | expr . '/' expr
   13     | expr '/' expr .
   16     | expr . AND expr
   17     | expr . OR expr
   18     | expr . EQ expr
   19     | expr . GT expr
   20     | expr . LT expr

    $default  reduce using rule 13 (expr)
